refactor: add keys constants

--- a/src/i18n/locales/default.json
+++ b/src/i18n/locales/default.json
@@ -48,7 +48,7 @@
             },
             "players": {
                 "position": "position",
-                "dateOfBirth": "dateOfBirth"
+                "dateOfBirth": "date of birth"
             },
             "dateChooser": {
                 "startDate": "startDate",
